<resources>
    <string name="app_name">Picasto</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码了？</string>
    <string name="register">注册</string>
    <string name="have_no_account">还没有账户？</string>
    <string name="register_now">立即注册</string>
    <string name="username">用户名</string>
    <string name="input_user_pass">输入用户名和密码</string>
    <string name="have_an_account">已经有账户了？</string>
    <string name="server_error">服务器无法访问。</string>
    <string name="edit_content_hint">记录你的想法</string>
    <string name="compose_location">所在位置</string>
    <string name="publish">发表</string>
</resources>